fix Collapse and User logo on Club page

--- a/src/pages/Club/components/ClubContacts/index.scss
+++ b/src/pages/Club/components/ClubContacts/index.scss
@@ -143,7 +143,7 @@
     height: 45px;
     position: absolute;
     right: calc(50% - 25px);
-    bottom: -25px;
+    bottom: -20px;
     background: url("/static/images/slider/slider-button.svg") center center no-repeat;
     transform: rotate(90deg);
     &.opened {
